<resources>
    <string name="app_name">WhatsApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo_de_la_app"></string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Your Password</string>
    <string name="login">LOGIN</string>
    <string name="confirm_your_password">Confirm Your Password</string>
    <string name="signup">SIGN UP</string>
</resources>