<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="30dp"
    android:background="@color/white"
    tools:context=".Sign_up">


  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/sign_up_login_Email"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/enter_email"
          android:textColorHint="@color/verde"
          app:boxStrokeColor="@color/verde"
          app:endIconTint="@color/verde"
          app:endIconMode="clear_text"
          app:startIconTint="@color/verde"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtsignupemail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            />

      </com.google.android.material.textfield.TextInputLayout>
      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/sign_up_pasword"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/enter_password"
          android:textColorHint="@color/verde"
          app:boxStrokeColor="@color/verde"
          app:endIconTint="@color/black"
          app:endIconMode="password_toggle"
          app:startIconTint="@color/verde"
          android:layout_below="@id/sign_up_login_Email"
          android:layout_marginTop="10dp"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtsignuppassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            />
      </com.google.android.material.textfield.TextInputLayout>
      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/sign_up_confirm_pasword"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/confirm_your_password"
          android:textColorHint="@color/verde"
          app:boxStrokeColor="@color/verde"
          app:endIconTint="@color/black"
          app:endIconMode="password_toggle"
          app:startIconTint="@color/verde"
          android:layout_below="@id/sign_up_login_Email"
          android:layout_marginTop="10dp"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/txtsignupconfirmpassword"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:inputType="textEmailAddress"
              android:textColor="@color/black"
              />
      </com.google.android.material.textfield.TextInputLayout>
      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/btnsignup"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@id/sign_up_confirm_pasword"
          android:layout_marginTop="10dp"
          android:textColor="@color/white"
          android:textStyle="bold"
          android:textSize="24sp"
          android:text="@string/signup"
          android:background="#254242"/>

        <ProgressBar
            android:id="@+id/signup_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="gone"
          />




  </LinearLayout>

</ScrollView>