<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:padding="30dp"
    tools:context=".Login">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"
                android:textColorHint="@color/verde"
                app:boxStrokeColor="@color/verde"
                app:endIconTint="@color/verde"
                app:endIconMode="clear_text"
                app:startIconTint="@color/verde"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtloginemail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_pasword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:textColorHint="@color/verde"
                app:boxStrokeColor="@color/verde"
                app:endIconTint="@color/black"
                app:endIconMode="password_toggle"
                app:startIconTint="@color/verde"
                android:layout_below="@id/login_Email"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtloginpassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnlogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_pasword"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="24sp"
                android:text="@string/login"
                android:background="#254242"/>
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btngooglelogin"
                android:layout_width="500dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/signup"
                android:layout_below="@id/btnlogin"
                android:scaleType="fitCenter"
                android:background="@color/white"/>
            <RelativeLayout
                android:id="@+id/login_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:elevation="10dp"
                android:padding="20dp"
                android:visibility="gone">
                <ProgressBar
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>
        </RelativeLayout>

    </LinearLayout>

</ScrollView>